# mad-icon

./: .gitignore  CONTRIBUTING.md  README.md  _typos.toml  pyproject.toml  refactoring_plan.md  ruff.toml
.roo/rules-code/: python-instructions.md  python-style.md
src/data/: data.json
src/mad_icon/: __init__.py  __main__.py  generate_icons.py  generate_launch_screens.py  get_data.py  get_data_model.py
src/mad_icon/models/: __init__.py  models.py  resolution.py
src/mad_icon/types/: __init__.py  icon_generation_types.py  types.py
src/mad_icon/utilities/: __init__.py  icon_generation_utils.py  image_processing.py  utilities.py
typings/cairosvg/: __init__.pyi  __main__.pyi  bounding_box.pyi  colors.pyi  css.pyi  defs.pyi  features.pyi  helpers.pyi  image.pyi  parser.pyi  path.pyi  shapes.pyi  surface.pyi  svg.pyi  test_api.pyi  text.pyi  url.pyi
typings/lxml/: __init__.pyi  _elementpath.pyi  builder.pyi  cssselect.pyi  doctestcompare.pyi  sax.pyi
typings/lxml/html/: __init__.pyi
typings/lxml/isoschematron/: __init__.pyi
